--- a/app/views/welcome/demo.html.erb
+++ b/app/views/welcome/demo.html.erb
@@ -114,105 +114,145 @@
           </td>
         </tr>
         <tr>
-          <td align="center" valign="top" id="bodyCell">
-            <table class="footer-wrap" border="0" cellpadding="0" cellspacing="0" width="100%">
+          <td height="25"></td>
+        </tr>
+        <tr>
+          <td align="center">
+            <table cellspacing="0" cellpadding="0" border="0" width="95%" align="center" id="templateContainer">
               <tr>
-                <td class="container" valign="top" id="bodyCell">
-                  <div class="content">
-                    <table class="about-table" border="0" cellpadding="0" cellspacing="0" width="100%">
-                      <tr>
-                        <th class="footer-img-holder" align="left">
-                          <%= image_tag("logo_footer_2x.png", class: "footer-logo") %>
-                        </th>
-                        <th class="about-header-cell" align="left">
-                          <div>Share the Wisdom <%= image_tag("small_grey_arrow_2x.png",:class=>"arrow") %></div>
-                        </th>
-                        <th class="about-header-cell" align="left">
-                          <div>More Goodness <%= image_tag("small_grey_arrow_2x.png",:class=>"arrow")%></p=div>
-                        </th>
-                      </tr>
-                      <tr class="about-table-row">
-                        <td class="about-table-cell" align="left">
-                          <div class="text">
-                            Our purpose is to help you</br>
-                            optimize your life so we can</br>
-                            change the world together.
-                          </div>
-                          <table class="about-company-table" border="0" cellpadding="0" cellspacing="0" width="100%">
-                            <thead>
-                              <tr>
-                                <th align="left">
-                                  <div class="sub-header">
-                                    <label>Company</label>
-                                    <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow") %>
-                                  </div>
-                                </th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr>
-                                <td align="left" class="lnks">About</td>
-                                <td align="left" class="lnks">Affiliate Program</td>
-                              </tr>
-                              <tr>
-                                <td align="left" class="lnks">Contact Us</td>
-                                <td align="left" class="lnks">Privacy Policy</td>
-                              </tr>
-                              <tr>
-                                <td align="left" class="lnks">Support</td>
-                                <td align="left" class="lnks">Terms and Conditions</td>
-                              </tr>
-                            </tbody>
-                          </table>
-                        </td>
-                        <td class="about-table-cell" align="left">
-                          <div class="social-img-holder"><%= image_tag("twitter_icon_2x.png", class: "twitter-img") %></div>
-                          <div class="social-img-holder"><%= image_tag("facebook_icon_2x.png", class: "fb-img")%></div>
-                        </td>
-                        <td class="about-table-cell" align="left">
-                          <div class="text">
-                            The Academy for Optimal Living</br>
-                            Virtual Conferences</br>
-                            PhilosophersNotes</br>
-                            Optimal Living 101</br>
-                            Rock Your Goddess Life</br>
-                            Blisstations</br>
-                            Quotes</br>
-                            Big Ideas
-                          </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td colspan="3" align="left" class="entheos-info-cell">
-                          <p>
-                            <b>en + theos.</b> Two little Greek words. Put'em together and you've got 
-                            <i>enthusiasm</i>--or "God within"--the secret sauce to authentic awesomeness.
-                          </p>
-                        </td>
-                      </tr>
-                    </table>
-                    <table class="unsubscribe-info-table" border="0" cellpadding="0" cellspacing="0" width="100%">
-                      <tr>
-                        <td class="unsubscribe-info-cell" align="left">
-                          <p>
-                            You're receiving this email because you signed up for the {insert reason}.</br>
-                            If this email looks weird,
-                            <a href="#">view it in your browser.</a></br>
-                            If you don't want to receive this newsletteranymore,you can 
-                            <a href="#">unsubscribe</a>
-                            (if you like share it with your friend!)
-                          </p>
-                        </td>
-                      </tr>
-                    </table>
-                  </div>
+                <td>
+                  <table cellspacing="0" cellpadding="0" border="0" width="100%" style="color:#8c8c8c;font-size:13px;line-height:normal;" id="templatePreheader">
+                    <tr>
+                      <td width="33%" valign="top">
+                        <a href="#" class="footer-img-holder"><%= image_tag("logo_footer_2x.png", class: "footer-logo") %></a>
+                        <p style="margin:15px 0;padding:0px;">
+                          Our purpose is to help you optimize your life so we can change the world together.
+                        </p>
+                        <h5 style="margin:0 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
+                            Company <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow") %>
+                        </h5>
+                        <table>
+                          <tr>
+                            <td width="90"><a href="#" style="color:#8c8c8c;text-decoration:none;">About</a></td>
+                            <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Affiliate Program</a></td>
+                          </tr>
+                          <tr>
+                            <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Contact Us</a></td>
+                            <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Privacy Policy</a></td>
+                          </tr>
+                          <tr>
+                            <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Support</a></td>
+                            <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Terms & Conditions</a></td>
+                          </tr>
+                        </table>
+                      </td>
+                      <td width="33%" align="center" style="text-align:center;" valign="top">
+                        <h5 style="margin:15px 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
+                          Share the Wisdom <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow") %>
+                        </h5>
+                        <p style="margin:5px 0 20px 0;padding:0px;">
+                          <a href="#"><%= image_tag("twitter_icon_2x.png", class: "twitter-img") %></a>
+                        </p> 
+                         <p style="margin:0px 0 20px 0;padding:0px;">
+                          <a href="#"><%= image_tag("facebook_icon_2x.png", class: "fb-img")%></a>
+                        </p>    
+                      </td>
+                      <td width="33%" valign="top">
+                        <h5 style="margin:15px 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
+                            More Goodness <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow") %>
+                        </h5> 
+                        <table border="0" width="100%">
+                          <tr>
+                            <td>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none;">The Academy for Optimal Living</a>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none;">Virtual Conferences</a>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none;">PhilosophersNotes</a>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none;">Optimal Living 101</a>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none;">The Academy for Optimal Living</a>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none;">Rock Your Goddess Life</a>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none;">Blissitations</a>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none;">Quotes</a>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none;">Big Ideas</a>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>  
+                </td>
+              </tr>
+            </table>  
+          </td>
+        </tr>
+        <tr>
+          <td height="45"></td>
+        </tr>
+        <tr>
+          <td>
+            <table cellspacing="0" cellpadding="0" border="0" width="95%" align="center" id="templatePreheader">
+              <tr>
+                <td bgcolor="#f5f5f5" style="background-color:#f5f5f5;border:1px solid #e0e0e0;padding:30px 20px;line-height:22px;text-align:center;color:#6e6e6e;font-size:13px;">
+                  en + theos. Two little Greek words. Put ‘em together and you’ve got enthusiasm—or “God within”—the secret sauce to authentic awesomeness.
                 </td>
               </tr>
             </table>
           </td>
         </tr>
+        <tr>
+          <td height="70"></td>
+        </tr>
+        <tr>
+          <td>
+            <table cellspacing="0" cellpadding="0" border="0" width="95%" align="center" id="templatePreheader">
+              <tr>
+                <td style="font-size:12px; text-align:center;">
+                  <p style="margin:0px 0 20px 0;padding:0px 50px; line-height: 20px;">
+                    You’re receiving this email because you signed up for the {<a href="#" style="color:#407bcf;text-decoration;">insert reason</a>}.If this email looks weird, <a href="#" style="color:#407bcf;text-decoration;">view it in your browser</a>. If you don’t want to receive this newsletter anymore,you can <a href="#" style="color:#407bcf;text-decoration;">unsubscribe</a>. (If you like it, share with a friend! :)
+                  </p>
+                  <p style="margin:0;padding:36px 0px;">
+                    @copy; 2009-2013 en*theos Enterprises, LLC | P.O. Box 33582 San Diego, CA 92163 
+                  </p> 
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+        <tr>
+          <%=link_to "send mail", welcome_index_path, method: "post" %>
+        </tr>
       </table>
     </td>
-    <tr><%=link_to "send mail", welcome_index_path, method: "post" %></tr>  
   </tr>
 </table>
