updated the footer for mobile and added disply block and none clases

--- a/app/assets/stylesheets/email.css
+++ b/app/assets/stylesheets/email.css
@@ -318,6 +318,17 @@ box-shadow: 0 5px 0px 0px #2E5997;*/
 	padding-bottom: 18px;
 }
 
+.mobile-footer {
+	display: none !important;
+}
+
+.footer {
+  display: block;
+}
+
+.moible {
+	display: none;
+}
 
 /* ------------------------------------------- 
 PHONE
