--- a/app/views/welcome/demo.html.erb
+++ b/app/views/welcome/demo.html.erb
@@ -4,8 +4,8 @@
    #templatePreheader{ padding: 0 30px; }
 </style>
 
-<style type="text/css" data-immutable="true">
-  @media only screen and (max-width: 480px) {
+<style type="text/css">
+  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
 
     #templateContainer { max-width: 600px !important; width: 100% !important; }
     #templatePreheader{ padding: 0px 30px; }
