updated the demo page

--- a/app/views/user_mailer/test.html.erb
+++ b/app/views/user_mailer/test.html.erb
@@ -2,10 +2,13 @@
    #bodyTable {height:100% !important; margin:0; padding:0; width:100% !important;}
    #templateContainer { max-width: 700px; width: 100%; }
    #templatePreheader{ padding: 0 30px; }
+   .mobile-footer {
+      display: none !important;
+    }
 </style>
 
-<style type="text/css" data-immutable="true">
-  @media only screen and (max-width: 480px) {
+<style type="text/css">
+  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
 
     #templateContainer { max-width: 600px !important; width: 100% !important; }
     #templatePreheader{ padding: 0px 30px; }
@@ -77,7 +80,7 @@
       display: block !important;
     }
     .footer {
-      display: none;
+      display: none !important;
     }
 
     td[class=headercell] img {
@@ -126,7 +129,7 @@
                       Hi{Name}
                     </div>
                   </td>
-                  <td class="academy-img-cell" rowspan="2">
+                  <td class="academy-img-cell" rowspan="2" style="text-align: right;">
                     <%= image_tag("academy_icon_emailreminder_2x.png",class: "academy-img", :width => "140px", :height=> "100px") %>
                   </td>
                 </tr>
@@ -135,32 +138,32 @@
             <div class="content">
               <table border="0" cellpadding="0" cellspacing="0" width="100%" id="templatePreheader" class="schedule" >
                 <tr>
-                  <td class="heading">
+                  <td class="heading" style="padding: 20px 0;">
                     Thanks for registering!
                   </td>
                 </tr>
                 <tr>
-                  <td class="calendar-cell" align="center" valign="top">
+                  <td class="calendar-cell" align="center" valign="top" style="padding: 18px 20px 0 0;">
                     <div style="width:177px;height:197px;background:#ffffff;border:1px solid #e3e3e3;">
                       <div style="height:41px;background:#60B86A;color:#ffffff;">
-                        <p style="font-size: 18px;line-height: 42px;text-align: center;">November</p>
+                        <p style="font-size: 18px;line-height: 42px;text-align: center; margin: 0;">November</p>
                       </div>
-                      <p style="font-size:65px; text-align:center; color:#4a4a4a; padding: 30px 0;">
+                      <p style="font-size:65px; text-align:center; color:#4a4a4a; padding: 30px 0; margin: 0;">
                         18
                         <span style="display:block; font-size:20px; color:#AFAFAF;">Wednesday</span>
                       </p>
                     </div>
                   </td>
                   <td class="class-info-cell" valign="top">
-                    <div class="blk">
+                    <div class="blk" style="padding-bottom: 24px;">
                       <label>Class:</label>
                       <span>How To Reach a Tough Goal</span>
                     </div>
-                    <div class="blk">
+                    <div class="blk" style="padding-bottom: 24px;">
                       <label>Time:</label>
                       <span>Tuesday, October 18, 2013 @ 10:00 am</span>
                     </div>
-                    <div class="blk">
+                    <div class="blk" style="padding-bottom: 24px;">
                       <label>Class Overview:</label> 
                       <span>
                         The most meaningful goals we pursue are usually also the toughest ones to reach. We'll discuss the *science* of reaching those tough goals.
@@ -185,11 +188,11 @@
                 <td class="teacher-info-cell" id="teacher-bio" valign="top" >
                   <div>
                     <h4>Heidi Grant Halvorson, Ph.D.</h4>
-                    <p style="margin-bottom: 8px;">
+                    <p style="padding-bottom: 8px; margin: 0;">
                       Heidi is a social psychologist who researches, writes and speaks about the science of motivation. She is the Associate Director of the Motivation Science Center at the Columbia Business School.
                     </p>
                   </div>
-                  <a>View full bio <%= image_tag("gren_arrow_2x.png",:class=>"arrow") %></a>
+                  <a href="#" style="text-decoration: none;">View full bio <%= image_tag("gren_arrow_2x.png",:class=>"arrow") %></a>
                 </td>
               </tr>
             </table>
@@ -207,8 +210,8 @@
         <tr>
           <td height="25"></td>
         </tr>
-        <tr class="footer">
-          <td align="center">
+        <tr>
+          <td align="center" class="footer" style="display: block;">
             <table cellspacing="0" cellpadding="0" border="0" width="95%" align="center" id="templateContainer">
               <tr>
                 <td>
@@ -307,8 +310,8 @@
             </table>  
           </td>
         </tr>
-        <tr class="mobile-footer">
-          <td align="center">
+        <tr>
+          <td align="center" class="mobile-footer" style="display: none !important; background-color: red; ">
             <table cellspacing="0" cellpadding="0" border="0" width="95%" align="center" id="templateContainer">
               <tr>
                 <td>
