--- a/app/assets/stylesheets/email.css
+++ b/app/assets/stylesheets/email.css
@@ -24,7 +24,7 @@ body {
 /* ------------------------------------- 
                 ELEMENTS 
 ------------------------------------- */
-a { color: #2BA6CB;}
+a { color: #61B76E;}
 
 .btn {
         /*text-decoration:none;
